Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36042

Assertion `str_length + (uint32) (4) <= Alloced_length' failed in Binary_string::q_append after SELECT ST_VALIDATE...

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • None
    • 12.0.0
    • GIS
    • None

    Description

      SELECT ST_VALIDATE( ST_SYMDIFFERENCE(  ST_GEOMFROMTEXT(' MULTIPOLYGON( ( ( 2 2, 2 8, 8 8, 8 2, 2 2 ), ( 4 4, 4 6, 6 6, 6 4, 4 4 ) ), ( (0.0 2.0,1.0 2.0,1.0 3.0,0.0 3.0,0.0 2.0) ) ) '),  ST_GEOMFROMTEXT(' POLYGON( ( 2 4, 5 8, 0 8, 8 1, 7 6, 2 4 ) ) ') ) ) ;
      

      Version: '11.7.0-MariaDB-debug-log'  
      mariadbd: 11.8/sql/sql_string.h:391: void Binary_string::q_append(uint32): Assertion `str_length + (uint32) (4) <= Alloced_length' failed.
      250207 16:01:46 [ERROR] mysqld got signal 6 ;
       
      Server version: 11.7.0-MariaDB-debug-log source revision: fa3f261e3358e3b24a74713c330475ce1e9517b5
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x33fd6)[0x7fa8120f5fd6]
      sql/sql_string.h:392(Binary_string::q_append(unsigned int))[0x55b9838deaa5]
      sql/spatial.cc:4026(Gis_multi_polygon::make_clockwise(String*) const)[0x55b983bad68d]
      sql/item_geofunc.cc:2160(Item_func_validate::val_str(String*))[0x55b9838d0b6e]
      sql/sql_type.cc:7669(Type_handler::Item_send_str(Item*, Protocol*, st_value*) const)[0x55b98348c888]
      sql/sql_type.h:5724(Type_handler_string_result::Item_send(Item*, Protocol*, st_value*) const)[0x55b9831dd226]
      sql/item.h:1256(Item::send(Protocol*, st_value*))[0x55b9829528ba]
      sql/protocol.cc:1359(Protocol::send_result_set_row(List<Item>*))[0x55b982a2abc4]
      sql/sql_class.cc:3279(select_send::send_data(List<Item>&))[0x55b982be430a]
      sql/sql_class.h:6179(select_result_sink::send_data_with_check(List<Item>&, st_select_lex_unit*, unsigned long long))[0x55b982f35a9d]
      sql/sql_select.cc:4898(JOIN::exec_inner())[0x55b982e590a7]
      sql/sql_select.cc:4812(JOIN::exec())[0x55b982e57ba6]
      sql/sql_select.cc:5345(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55b982e5c464]
      sql/sql_select.cc:628(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x55b982e29e9a]
      sql/sql_parse.cc:6154(execute_sqlcom_select(THD*, TABLE_LIST*))[0x55b982d45e01]
      sql/sql_parse.cc:3954(mysql_execute_command(THD*, bool))[0x55b982d359ab]
      sql/sql_parse.cc:7876(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55b982d50e60]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x55b982d27475]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x55b982d24118]
      sql/sql_connect.cc:1448(do_handle_one_connection(CONNECT*, bool))[0x55b98322bc0a]
      sql/sql_connect.cc:1352(handle_one_connection)[0x55b98322b595]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x55b983f36aec]
      nptl/pthread_create.c:478(start_thread)[0x7fa8126a6609]
       
      Query (0x6290001092a8): SELECT ST_VALIDATE( ST_SYMDIFFERENCE(  ST_GEOMFROMTEXT(' MULTIPOLYGON( ( ( 2 2, 2 8, 8 8, 8 2, 2 2 ), ( 4 4, 4 6, 6 6, 6 4, 4 4 ) ), ( (0.0 2.0,1.0 2.0,1.0 3.0,0.0 3.0,0.0 2.0) ) ) '),  ST_GEOMFROMTEXT(' POLYGON( ( 2 4, 5 8, 0 8, 8 1, 7 6, 2 4 ) ) ') ) )
      

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.