MDEV-36042 Assertion failed in Binary_string::q_append

Like MDEV-35062, reserve sufficient space in the result for
q_append'ed data, as q_append does not itself reserve space like
it's append counterpart.